ziina/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/part-of: wordpress-plugin-stg
